--- a/ProyectoLab/ProyectoLab/Web.config
+++ b/ProyectoLab/ProyectoLab/Web.config
@@ -4,6 +4,10 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  
+     <connectionStrings>
+    <add connectionString="Data Source = RJN\SQLSERVER; Initial Catalog = Proyecto1; Integrated Security = True; Pooling=False; Connection Lifetime=1; Max Pool Size=1;" name="SQLSTR" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
