--- a/ProyectoLab/ProyectoLab/Web.config
+++ b/ProyectoLab/ProyectoLab/Web.config
@@ -4,14 +4,22 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  
      <connectionStrings>
     <add connectionString="Data Source = RJN\SQLSERVER; Initial Catalog = Proyecto1; Integrated Security = True; Pooling=False; Connection Lifetime=1; Max Pool Size=1;" name="SQLSTR" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
+    <httpHandlers>
+      <add verb="GET" path="CaptchaImage.axd" type="MSCaptcha.CaptchaImageHandler, MSCaptcha" />
+    </httpHandlers>
   </system.web>
+  <system.webServer>
+    <handlers>
+      <add name="CaptchaImage" verb="GET" path="CaptchaImage.axd" type="MSCaptcha.CaptchaImageHandler, MSCaptcha"/>
+    </handlers>
+    <validation validateIntegratedModeConfiguration="false"/>
+  </system.webServer>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
@@ -22,4 +30,5 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  
 </configuration>
