--- a/ProyectoLab/TestProyectoLab/Web.config
+++ b/ProyectoLab/TestProyectoLab/Web.config
@@ -4,13 +4,18 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  
+  <add verb="GET" path="CaptchaImage.axd"
+ type="MSCaptcha.CaptchaImageHandler, MSCaptcha" />
      <connectionStrings>
     <add connectionString="Data Source = RJN\SQLSERVER; Initial Catalog = Proyecto1; Integrated Security = True; Pooling=False; Connection Lifetime=1; Max Pool Size=1;" name="SQLSTR" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
+    <httpHandlers>
+      <add verb="GET" path="CaptchaImage.axd"
+     type="MSCaptcha.CaptchaImageHandler, MSCaptcha" />
+    </httpHandlers>
   </system.web>
   <system.codedom>
     <compilers>
