--- a/ProyectoLab/TestProyectoLab/TestProyectoLab.csproj
+++ b/ProyectoLab/TestProyectoLab/TestProyectoLab.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MSCaptcha">
+      <HintPath>C:\Users\randyfernando\Downloads\CaptchaAsp.net\Bin\MSCaptcha.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
   </ItemGroup>
@@ -52,6 +55,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Clases\ConsultarDatosPacienteTests.cs" />
+    <Compile Include="Clases\SolicitarCitaTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
