--- a/ProyectoLab/ProyectoLab/ProyectoLab.csproj
+++ b/ProyectoLab/ProyectoLab/ProyectoLab.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Img\Caledario.jpg" />
     <Content Include="Img\paciente.png" />
     <Content Include="Login.aspx" />
     <Content Include="packages.config" />
