--- a/ProyectoLab/ProyectoLab/bin/ProyectoLab.dll.config
+++ b/ProyectoLab/ProyectoLab/bin/ProyectoLab.dll.config
@@ -6,7 +6,7 @@
 <configuration>
   
      <connectionStrings>
-    <add connectionString="Data Source = RJN\SQLSERVER; Initial Catalog = Proyecto1; Integrated Security = True; Pooling=False; Connection Lifetime=1; Max Pool Size=1;" name="SQLSTR" />
+    <add connectionString="Data Source = NESTOR\SQLEXPRESS; Initial Catalog = Proyecto1; Integrated Security = True; Pooling=False; Connection Lifetime=1; Max Pool Size=1;" name="SQLSTR" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
